--- a/Math227C20Sp_P08_LuluLai.ipynb
+++ b/Math227C20Sp_P08_LuluLai.ipynb
@@ -14,11 +14,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "twuT_kivV3EC",
-        "outputId": "fea6ccef-60fe-4907-d9f8-1a50ea07f651",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "twuT_kivV3EC",
+        "outputId": "fea6ccef-60fe-4907-d9f8-1a50ea07f651"
       },
       "outputs": [
         {
@@ -50,11 +50,11 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "TSec85s9V3EI",
-        "outputId": "855c6c37-af9c-4715-954f-d0e311bd6ae9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TSec85s9V3EI",
+        "outputId": "855c6c37-af9c-4715-954f-d0e311bd6ae9"
       },
       "outputs": [
         {
@@ -106,12 +106,12 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "CDCFbuLuV3EK",
-        "outputId": "ed1e4ed9-5eb8-45e6-dde8-14d0c813f99c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 526
-        }
+        },
+        "id": "CDCFbuLuV3EK",
+        "outputId": "ed1e4ed9-5eb8-45e6-dde8-14d0c813f99c"
       },
       "outputs": [
         {
@@ -266,12 +266,12 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
-        "id": "Buue7-frV3EO",
-        "outputId": "7a19918e-c04b-4ed1-d7de-ad23ca2fc215",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 526
-        }
+        },
+        "id": "Buue7-frV3EO",
+        "outputId": "7a19918e-c04b-4ed1-d7de-ad23ca2fc215"
       },
       "outputs": [
         {
@@ -374,6 +374,53 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "train.factor"
+      ],
+      "metadata": {
+        "id": "Gv0hNgzOdDSE",
+        "outputId": "73021408-aa6b-4a9d-cdda-07e962fa8193",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              ".list-inline {list-style: none; margin:0; padding: 0}\n",
+              ".list-inline>li {display: inline-block}\n",
+              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+              "</style>\n",
+              "<ol class=list-inline><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>0</li><li>0</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>⋯</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>0</li><li>0</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>0</li><li>0</li><li>0</li><li>0</li><li>1</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>1</li><li>1</li><li>0</li><li>1</li><li>0</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>0</li><li>0</li><li>0</li><li>1</li><li>1</li><li>1</li></ol>\n"
+            ],
+            "text/markdown": "1. 1\n2. 0\n3. 1\n4. 1\n5. 0\n6. 0\n7. 0\n8. 1\n9. 1\n10. 1\n11. 1\n12. 1\n13. 1\n14. 1\n15. 1\n16. 1\n17. 0\n18. 0\n19. 1\n20. 1\n21. 0\n22. 1\n23. 1\n24. 1\n25. 0\n26. 0\n27. 0\n28. 0\n29. 1\n30. 0\n31. 0\n32. 1\n33. 1\n34. 0\n35. 1\n36. 1\n37. 1\n38. 0\n39. 1\n40. 1\n41. 1\n42. 1\n43. 1\n44. 1\n45. 1\n46. 1\n47. 1\n48. 1\n49. 1\n50. 1\n51. 1\n52. 1\n53. 1\n54. 1\n55. 0\n56. 1\n57. 0\n58. 1\n59. 0\n60. 0\n61. 1\n62. 1\n63. 0\n64. 1\n65. 1\n66. 0\n67. 0\n68. 1\n69. 1\n70. 0\n71. 1\n72. 1\n73. 0\n74. 1\n75. 0\n76. 0\n77. 1\n78. 1\n79. 1\n80. 1\n81. 1\n82. 0\n83. 0\n84. 1\n85. 0\n86. 0\n87. 1\n88. 1\n89. 0\n90. 1\n91. 1\n92. 0\n93. 0\n94. 1\n95. 1\n96. 1\n97. 1\n98. 1\n99. 1\n100. 1\n101. 1\n102. 1\n103. 0\n104. 0\n105. 1\n106. 1\n107. 1\n108. 1\n109. 1\n110. 1\n111. 1\n112. 0\n113. 1\n114. 1\n115. 1\n116. 1\n117. 1\n118. 0\n119. 1\n120. 1\n121. 0\n122. 1\n123. 1\n124. 0\n125. 0\n126. 1\n127. 1\n128. 1\n129. 0\n130. 0\n131. 1\n132. 1\n133. 1\n134. 1\n135. 1\n136. 1\n137. 1\n138. 1\n139. 1\n140. 1\n141. 0\n142. 1\n143. 1\n144. 0\n145. 0\n146. 0\n147. 0\n148. 0\n149. 0\n150. 0\n151. 1\n152. 1\n153. 1\n154. 1\n155. 0\n156. 1\n157. 1\n158. 1\n159. 1\n160. 1\n161. 1\n162. 0\n163. 1\n164. 0\n165. 1\n166. 1\n167. 0\n168. 0\n169. 1\n170. 1\n171. 1\n172. 1\n173. 1\n174. 1\n175. 0\n176. 1\n177. 0\n178. 0\n179. 1\n180. 1\n181. 1\n182. 1\n183. 0\n184. 1\n185. 1\n186. 0\n187. 1\n188. 1\n189. 0\n190. 1\n191. 0\n192. 1\n193. 1\n194. 1\n195. 0\n196. 0\n197. 0\n198. 1\n199. 1\n200. 1\n201. ⋯\n202. 1\n203. 0\n204. 1\n205. 1\n206. 1\n207. 1\n208. 1\n209. 1\n210. 0\n211. 1\n212. 1\n213. 1\n214. 1\n215. 1\n216. 1\n217. 0\n218. 1\n219. 1\n220. 1\n221. 1\n222. 1\n223. 1\n224. 0\n225. 1\n226. 1\n227. 1\n228. 1\n229. 1\n230. 0\n231. 1\n232. 1\n233. 1\n234. 1\n235. 0\n236. 0\n237. 0\n238. 1\n239. 1\n240. 1\n241. 0\n242. 1\n243. 1\n244. 1\n245. 1\n246. 1\n247. 1\n248. 1\n249. 1\n250. 0\n251. 1\n252. 1\n253. 1\n254. 1\n255. 1\n256. 1\n257. 1\n258. 1\n259. 0\n260. 1\n261. 1\n262. 1\n263. 0\n264. 1\n265. 1\n266. 1\n267. 1\n268. 0\n269. 1\n270. 1\n271. 1\n272. 0\n273. 1\n274. 1\n275. 1\n276. 1\n277. 0\n278. 1\n279. 1\n280. 1\n281. 0\n282. 1\n283. 0\n284. 1\n285. 1\n286. 1\n287. 0\n288. 1\n289. 1\n290. 1\n291. 1\n292. 1\n293. 0\n294. 1\n295. 1\n296. 1\n297. 0\n298. 0\n299. 1\n300. 1\n301. 1\n302. 1\n303. 1\n304. 0\n305. 1\n306. 1\n307. 1\n308. 1\n309. 1\n310. 0\n311. 1\n312. 1\n313. 0\n314. 1\n315. 1\n316. 0\n317. 1\n318. 1\n319. 1\n320. 0\n321. 1\n322. 1\n323. 1\n324. 1\n325. 0\n326. 1\n327. 1\n328. 1\n329. 0\n330. 1\n331. 0\n332. 0\n333. 0\n334. 1\n335. 0\n336. 1\n337. 1\n338. 1\n339. 1\n340. 0\n341. 1\n342. 0\n343. 1\n344. 0\n345. 1\n346. 1\n347. 1\n348. 1\n349. 1\n350. 1\n351. 1\n352. 1\n353. 1\n354. 0\n355. 0\n356. 1\n357. 1\n358. 0\n359. 1\n360. 1\n361. 0\n362. 0\n363. 1\n364. 1\n365. 0\n366. 0\n367. 0\n368. 0\n369. 1\n370. 0\n371. 1\n372. 1\n373. 1\n374. 1\n375. 0\n376. 0\n377. 1\n378. 1\n379. 0\n380. 1\n381. 0\n382. 0\n383. 0\n384. 1\n385. 1\n386. 1\n387. 1\n388. 1\n389. 1\n390. 1\n391. 1\n392. 1\n393. 1\n394. 1\n395. 1\n396. 0\n397. 0\n398. 0\n399. 1\n400. 1\n401. 1\n\n\n",
+            "text/latex": "\\begin{enumerate*}\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 0\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item ⋯\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 0\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 1\n\\item 0\n\\item 0\n\\item 0\n\\item 1\n\\item 1\n\\item 1\n\\end{enumerate*}\n",
+            "text/plain": [
+              "  [1] 1 0 1 1 0 0 0 1 1 1 1 1 1 1 1 1 0 0 1 1 0 1 1 1 0 0 0 0 1 0 0 1 1 0 1 1 1\n",
+              " [38] 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 0 1 0 0 1 1 0 1 1 0 0 1 1 0 1 1 0 1\n",
+              " [75] 0 0 1 1 1 1 1 0 0 1 0 0 1 1 0 1 1 0 0 1 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 1 1\n",
+              "[112] 0 1 1 1 1 1 0 1 1 0 1 1 0 0 1 1 1 0 0 1 1 1 1 1 1 1 1 1 1 0 1 1 0 0 0 0 0\n",
+              "[149] 0 0 1 1 1 1 0 1 1 1 1 1 1 0 1 0 1 1 0 0 1 1 1 1 1 1 0 1 0 0 1 1 1 1 0 1 1\n",
+              "[186] 0 1 1 0 1 0 1 1 1 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 1 1 1 1 1 1 0 1 1 0 0 1 1\n",
+              "[223] 1 1 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 0 1 1 1 1 0\n",
+              "[260] 0 0 1 1 1 0 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0\n",
+              "[297] 1 1 1 1 0 1 1 1 0 1 0 1 1 1 0 1 1 1 1 1 0 1 1 1 0 0 1 1 1 1 1 0 1 1 1 1 1\n",
+              "[334] 0 1 1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0 1 0 0 0 1 0 1 1 1 1 0 1 0 1 0 1 1\n",
+              "[371] 1 1 1 1 1 1 1 0 0 1 1 0 1 1 0 0 1 1 0 0 0 0 1 0 1 1 1 1 0 0 1 1 0 1 0 0 0\n",
+              "[408] 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 1 1 1"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "FVzPrsrRV3EQ"
@@ -386,13 +433,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "KRSwrn2iV3EQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KRSwrn2iV3EQ",
+        "outputId": "e397d4a6-f39c-446d-9f7b-483b0d42e1d7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Warning message in Ops.factor(knn.predValues, train.factor):\n",
+            "“‘-’ not meaningful for factors”\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "gof <- sum((knn.predValues-train.factor)^2)"
       ]
     },
     {
